--- a/css/styles.scss
+++ b/css/styles.scss
@@ -32,7 +32,7 @@ h1 {
     margin: 0 0 37px;
 }
 
-#root {
+.root {
     width: 100%;
     min-width: 375px;
     min-height: 100vh;
@@ -60,8 +60,32 @@ main {
         width: 190px;
         height: 200px;
         z-index: 10;
+        animation: bounce 0.5s;
+        animation-direction: alternate;
+        animation-timing-function: cubic-bezier(.5, 0.05, 1, .5);
+        animation-iteration-count: infinite;
     }
 
+}
+
+@keyframes bounce {
+    from {
+        transform: translate3d(0, -10px, 0);
+    }
+    to {
+        transform: translate3d(0, 10px, 0);
+    }
+}
+
+@-webkit-keyframes bounce {
+    from {
+        -webkit-transform: translate3d(0, -10px, 0);
+        transform: translate3d(0, -10px, 0);
+    }
+    to {
+        -webkit-transform: translate3d(0, 10px, 0);
+        transform: translate3d(0, 10px, 0);
+    }
 }
 
 article {
@@ -193,7 +217,7 @@ footer {
 }
 
 @media screen and (min-height: 768px) and (min-width: 1440px) {
-    #root {
+    .root {
         padding: 8.125rem 0 4rem;
     }
 }
@@ -231,7 +255,7 @@ footer {
         margin: 0 0 32px;
     }
 
-    #root {
+    .root {
         padding: 3rem 0;
     }
 
@@ -246,6 +270,7 @@ footer {
             width: 239px;
             height: 182px;
             z-index: 10;
+            animation: none;
         }
 
         &::after {
