--- a/css/styles.scss
+++ b/css/styles.scss
@@ -237,13 +237,14 @@ footer {
             width: 280px;
         }
 
-    }
-}
+        h2 {
 
-@media screen and (max-width: 1000px) {
-    article {
-        .contentWrapper {
-            width: 260px;
+            label {
+                &::after {
+                    margin: 6px 0 0 0;
+                }
+            }
+            
         }
 
     }
